RESOLVED FIXED252642
REGRESSION(260564@main): NAN is not a valid constexpr
https://bugs.webkit.org/show_bug.cgi?id=252642
Summary REGRESSION(260564@main): NAN is not a valid constexpr
Ross Kirsling
Reported 2023-02-20 19:07:52 PST
.
Attachments
Ross Kirsling
Comment 1 2023-02-20 19:49:06 PST
EWS
Comment 2 2023-02-20 21:15:51 PST
Committed 260589@main (71409d2fe4b6): <https://commits.webkit.org/260589@main> Reviewed commits have been landed. Closing PR #10423 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-02-20 21:16:19 PST
Note You need to log in before you can comment on or make changes to this bug.