REGRESSION(260564@main): NAN is not a valid constexpr https://bugs.webkit.org/show_bug.cgi?id=252642

Unreviewed PlayStation build fix.

* Source/WebCore/platform/graphics/FontDescription.h:
(WebCore::FloatMarkableTraits::emptyValue):
NAN (like std::nanf("") and JSC::pureNaN()) isn't a valid constexpr, but std::numeric_limits<float>::quiet_NaN() is.

Canonical link: https://commits.webkit.org/260589@main